Labs/require-labels/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-labels-policy
spec:
  steps:
  - name: step-01 
    try:
    - apply:
        file: ../require-labels.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: require-labels
          spec:
            validationFailureAction: Audit
    - assert:
        file: policy-assert.yaml
  - name: step-02
    try:
    - apply:
        file: good-resource.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-resource.yaml
